style.css
html, body 
{
    /* The universe takes up all available space */
    width: 100%;
    height: 100%;
    
    /* The universe is black */
    background-color: black;
}

body {
    font-family: helvetica, arial, verdana, sans-serif;
}

input {
	font-size: 7em;
	background-color: transparent;
	text-align: center;
	border-color: orange;
    border-width: 1;
    border-style: solid;
    border-radius: 50%;
	width: 100%;
	color: #fff;
	box-shadow: 0 0 128px red;
}

label {
	/* title of box */
	display: block;
	font-size: 4em;
	color: #000000;
	margin: -.5em 0 .5em 0;
}

button {
	/* basics */
	color: #444;
	background-color: #B5B198;
	font-size: 2em;
	/* rounded corners */
    -webkit-border-radius: 10px;
          border-radius: 6px; 
    -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;
	font-weight: bold;

}

button:hover, button:active, button:focus 
{
	background-color: #CBC7AE;
}

.box {
	position: absolute;
	top: 0%;
    left: 0%;
	
	/* basics */
	background-color: #444;
	color: #C4BE92;
    text-align: center;

	/* rounded corners */
    -webkit-border-radius: 12px;
    border-radius: 12px; 
    -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;
    padding: 4em 3em 2em;
    width: 8em;
	margin: 50 0;	
  	-webkit-box-shadow: 0px 0px 12px 0px #000;
    box-shadow: 0px 0px 12px 0px #000;
}

title {
	font-size: 7.5em;
	background-color: transparent;
	text-align: center;
	border-width: 0;
	width: 100%;
	margin: 0 0 .1em 0;
	color: #fff;
}

.TradeMark {
	position: absolute;
	top: 50%;
    left: 0%;
	
	background-color: #CC9900;
	color: #C4BE92;
    text-align: center;
	
    padding: 2em 1em 2em;
    width: 70em;
	margin: 865 0;	
  	-webkit-box-shadow: 0px 0px 12px 0px #000;
    box-shadow: 0px 0px 12px 0px #000;
}

true {
	/* title of box */
	display: block;
	font-size: 4em;
	color: #000000;
	margin: 0 0 .5em 0;
}
false {
	display: block;
	font-size: 4em;
	color: #000000;
	margin: 0 0 .5em 0;
}

.Disclaimer{
	position: absolute;
	top: 50%;
    left: 72.5%;
	
	background-color: #FFFFFF;
	color: #fff;
    text-align: center;
	
    -webkit-border-radius: 12px;
    border-radius: 12px; 
    -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;
    padding: 1em 1em 1em;
    width: 70em;
	margin: 1006 0;	
  	-webkit-box-shadow: 0px 0px 12px 0px #000;
    box-shadow: 0px 0px 12px 0px #000;
}


.zoom
{
	/* Not sure this is working */
    zoom: 33%;
}

#sun {
    position: absolute;
    top: 50%;
    left: 50%;

    height: 200px;
    width: 200px;
    margin-top: -100px; 
    margin-left: -100px;

    border-color: orange;
    border-width: 8px;
    border-style: solid;
    border-radius: 50%;

    box-shadow: 0 0 128px red;
}

#mercury {
    position: absolute;
    top: 37.5%;
    left: 37.5%;
    
    height: 225px;
    width: 300px;
    margin-top: 140px; 
    margin-left: -100px;

}

#mercury-orbit {
    position: absolute;
    top: 50%;
    left: 50%;

    width: 400px;
    height: 400px;
    margin-top: -190px;
    margin-left: -190px;

    border-width: 2px;
    border-style: dotted;
    border-color: white;
    border-radius: 50%;
    
    
    -webkit-animation: spin-right 2.40846s linear infinite;
     -moz-animation: spin-right 2.40846s linear infinite;
      -ms-animation: spin-right 2.40846s linear infinite;
       -o-animation: spin-right 2.40846s linear infinite;
          animation: spin-right 2.40846s linear infinite;
}

#venus {
	position: absolute;
    top: 37.5%;
    left: 37.5%;
    
    height: 250px;
    width: 340px;
    margin-top: 220px; 
    margin-left: -100px;
}

#venus-orbit {
	position: absolute;
    top: 50%;
    left: 50%;

    width: 575px;
    height: 575px;
    margin-top: -277.5px;
    margin-left: -267.5px;

    border-width: 2px;
    border-style: dotted;
    border-color: white;
    border-radius: 50%;
	
	
	-webkit-animation: spin-right 6.15s linear infinite;
     -moz-animation: spin-right 6.15s linear infinite;
      -ms-animation: spin-right 6.15s linear infinite;
       -o-animation: spin-right 6.15s linear infinite;
          animation: spin-right 6.15s linear infinite;
}

#earth {
    position: absolute;
    top: 0%;
    left: 0%;
    
    height: 350px;
    width: 500px;
    margin-top: -150px; 
    margin-left: 170px;
}

#earth-orbit {
    position: absolute;
    top: 50%;
    left: 50%;

    width: 800px;
    height: 800px;
    margin-top: -390px;
    margin-left: -380px;

    border-width: 2px;
    border-style: dotted;
    border-color: white;
    border-radius: 50%;
    
    
    -webkit-animation: spin-right 10s linear infinite;
     -moz-animation: spin-right 10s linear infinite;
      -ms-animation: spin-right 10s linear infinite;
       -o-animation: spin-right 10s linear infinite;
          animation: spin-right 10s linear infinite;
		  
}

#moon {
	position: absolute;
	left: 50%;
	top: 50%;
    
    height: 150px;
    width: 200px;
    margin-top: -35px; 
    margin-left: -35px;
}

#moon-orbit {
	position: absolute;
    top: 50%;
    left: 50%;

    width: 150px;
    height: 150px;
    margin-top: -475px;
    margin-left: -92.5px;

    border-width: 2px;
    border-style: dotted;
    border-color: white;
    border-radius: 50%;
	
	-webkit-animation: spin-right 0.748s linear infinite;
     -moz-animation: spin-right 0.748s linear infinite;
      -ms-animation: spin-right 0.748s linear infinite;
       -o-animation: spin-right 0.748s linear infinite;
          animation: spin-right 0.748s linear infinite;
}

#test-orbit {
	position: absolute;
    top: 50%;
    left: 50%;

    width: 800px;
    height: 800px;
    margin-top: -390px;
    margin-left: -380px;

    border-width: 2px;
    border-style: dotted;
    border-color: white;
    border-radius: 50%;
    
    
    -webkit-animation: spin-right 10s linear infinite;
     -moz-animation: spin-right 10s linear infinite;
      -ms-animation: spin-right 10s linear infinite;
       -o-animation: spin-right 10s linear infinite;
          animation: spin-right 10s linear infinite;
}


#mars {
    position: absolute;
    top: 5%;
    left: 5%;
    
    height: 281.25px;
    width: 375px;
    margin-top: -65px; 
    margin-left: -65px;
}

#mars-orbit {
	position: absolute;
    top: 50%;
    left: 50%;

    width: 1000px;
    height: 1000px;
    margin-top: -490px;
    margin-left: -480px;

    border-width: 2px;
    border-style: dotted;
    border-color: white;
    border-radius: 50%;
	
	
	-webkit-animation: spin-right 18.81s linear infinite;
     -moz-animation: spin-right 18.81s linear infinite;
      -ms-animation: spin-right 18.81s linear infinite;
       -o-animation: spin-right 18.81s linear infinite;
          animation: spin-right 18.81s linear infinite;

}

#jupiter {
	position: absolute;
    top: 0%;
    left: 0%;
    
    height: 600px;
    width: 825px;
    margin-top: -140px; 
    margin-left: -140px;
}


#jupiter-orbit {
	position: absolute;
    top: 50%;
    left: 50%;

    width: 1250px;
    height: 1250px;
    margin-top: -615px;
    margin-left: -605px;

    border-width: 2px;
    border-style: dotted;
    border-color: white;
    border-radius: 50%;
	
	
	-webkit-animation: spin-right 118.6s linear infinite;
     -moz-animation: spin-right 118.6s linear infinite;
      -ms-animation: spin-right 118.6s linear infinite;
       -o-animation: spin-right 118.6s linear infinite;
          animation: spin-right 118.6s linear infinite;
}

#saturn {
	position: absolute;
    top: 0%;
    left: 0%;
    
    height: 600px;
    width: 825px;
    margin-top: -250px; 
    margin-left: 400px;
}


#saturn-orbit {
	position: absolute;
    top: 50%;
    left: 50%;

    width: 1550px;
    height: 1550px;
    margin-top: -765px;
    margin-left: -755px;

    border-width: 2px;
    border-style: dotted;
    border-color: white;
    border-radius: 50%;
	
	
	-webkit-animation: spin-right 294.6s linear infinite;
     -moz-animation: spin-right 294.6s linear infinite;
      -ms-animation: spin-right 294.6s linear infinite;
       -o-animation: spin-right 294.6s linear infinite;
          animation: spin-right 294.6s linear infinite;
}

#uranus {
	position: absolute;
    top: 0%;
    left: 0%;
    
    height: 600px;
    width: 825px;
    margin-top: -200px; 
    margin-left: 450px;
}


#uranus-orbit {
	position: absolute;
    top: 50%;
    left: 50%;

    width: 1800px;
    height: 1800px;
    margin-top: -890px;
    margin-left: -880px;

    border-width: 2px;
    border-style: dotted;
    border-color: white;
    border-radius: 50%;
	
	
	-webkit-animation: spin-right 840.1s linear infinite;
     -moz-animation: spin-right 840.1s linear infinite;
      -ms-animation: spin-right 840.1s linear infinite;
       -o-animation: spin-right 840.1s linear infinite;
          animation: spin-right 840.1s linear infinite;
}

#neptune {
	position: absolute;
    top: 0%;
    left: 0%;
    
    height: 600px;
    width: 825px;
    margin-top: -330px; 
    margin-left: 650px;
}


#neptune-orbit {
	position: absolute;
    top: 50%;
    left: 50%;

    width: 2100px;
    height: 2100px;
    margin-top: -1040px;
    margin-left: -1030px;

    border-width: 2px;
    border-style: dotted;
    border-color: white;
    border-radius: 50%;
	
	
	-webkit-animation: spin-right 1648s linear infinite;
     -moz-animation: spin-right 1648s linear infinite;
      -ms-animation: spin-right 1648s linear infinite;
       -o-animation: spin-right 1648s linear infinite;
          animation: spin-right 1648s linear infinite;
}









@-webkit-keyframes spin-right {
  100% {
    -webkit-transform: rotate(360deg);
       -moz-transform: rotate(360deg);
        -ms-transform: rotate(360deg);
         -o-transform: rotate(360deg);
            transform: rotate(360deg);
  }
}

@keyframes spin-right {
  100% {
    -webkit-transform: rotate(360deg);
       -moz-transform: rotate(360deg);
        -ms-transform: rotate(360deg);
         -o-transform: rotate(360deg);
            transform: rotate(360deg);
  }
}

